fix: remove default input border radius on ios

--- a/src/scss/components/forms/_inputs.scss
+++ b/src/scss/components/forms/_inputs.scss
@@ -42,7 +42,6 @@
   line-height: 1.3;
   color: inherit;
   background-color: inherit;
-  border-radius: 0;
 
   &:focus {
     outline: 0;
