--- a/src/scss/core/_base.scss
+++ b/src/scss/core/_base.scss
@@ -10,6 +10,10 @@ html {
   -webkit-tap-highlight-color: transparent;
 }
 
+input {
+  border-radius: 0;
+}
+
 h1,
 h2,
 h3,
